add line to .gitignore to ignore Jupyter Notebooks checkpoint directory

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 schema/.$e-r_schema.drawio.bkp
 schema/.$e-r_restructuring_schema.drawio.bkp
 schema/.$e-r_restructuring.drawio.bkp
+.ipynb_checkpoints/
