--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ schema/.$e-r_schema.drawio.bkp
 schema/.$e-r_restructuring_schema.drawio.bkp
 schema/.$e-r_restructuring.drawio.bkp
 .ipynb_checkpoints/
+fakeDB/.ipynb_checkpoints/
